No more List.of, now we like Arrays.asList yoooooo